--- a/Drogaria/src/main/webapp/WEB-INF/web.xml
+++ b/Drogaria/src/main/webapp/WEB-INF/web.xml
@@ -13,6 +13,12 @@
         <param-value>Development</param-value>
     </context-param>
     
+    <!-- Tema do PrimeFaces -->
+	<context-param>
+		<param-name>primefaces.THEME</param-name>
+		<param-value>bootstrap</param-value>
+	</context-param>
+    
     <!-- Configuração do JSF -->
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
